# ling-video-bot

./: .gitignore  README.md  _manifest.json  config.example.toml  plugin.py  pyproject.toml  requirements.txt
